--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+        <meta name="google-site-verification" content="google959fdaaea473c92e.html" />
+        <!-- seu código -->
+      </head>
+      
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Senzala Das Almas - Pai Davilo de 7 Encruzilhadas</title>
